// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works 1`] = `
.c0 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
  padding: 0.5rem;
}

.c0 p {
  padding-bottom: 0.5rem;
}

.c0 p:last-child {
  padding-bottom: 0;
}

.c1 {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
}

<span
  class="c0"
  kind="primary"
>
  <span
    class="c1"
  >
    Hello world
  </span>
</span>
`;

exports[`it works with href 1`] = `
.c0 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
  padding: 0.5rem;
}

.c0 p {
  padding-bottom: 0.5rem;
}

.c0 p:last-child {
  padding-bottom: 0;
}

.c1 {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
}

<span
  class="c0"
  href="https://href.test"
  kind="primary"
>
  <span
    class="c1"
  >
    Hello world
  </span>
</span>
`;

exports[`it works with namespace 1`] = `
.c0 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
  padding: 0.5rem;
}

.c0 p {
  padding-bottom: 0.5rem;
}

.c0 p:last-child {
  padding-bottom: 0;
}

.c1 {
  font-size: 0.75rem;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
  background-color: #292B3E;
  color: white;
}

.c2 {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
}

<span
  class="c0"
  kind="primary"
>
  <span
    class="c1"
  >
    namespace
  </span>
  <span
    class="c2"
  >
    Hello world
  </span>
</span>
`;

exports[`it works with namespace and href 1`] = `
.c0 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
  padding: 0.5rem;
}

.c0 p {
  padding-bottom: 0.5rem;
}

.c0 p:last-child {
  padding-bottom: 0;
}

.c1 {
  font-size: 0.75rem;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
  background-color: #292B3E;
  color: white;
}

.c2 {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
}

<span
  class="c0"
  href="https://href.test"
  kind="primary"
>
  <span
    class="c1"
  >
    namespace
  </span>
  <span
    class="c2"
  >
    Hello world
  </span>
</span>
`;
